Closed Bug 364042 Opened 19 years ago Closed 19 years ago

First startup profile migration is broken

Categories

(Firefox :: Migration, defect, P2)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
Firefox 3 alpha2

People

(Reporter: Gavin, Assigned: Gavin)

References

Details

Attachments

(1 file)

The patch for bug 345517 changed one use of FindInReadable's end pointer to Find's return value, and didn't account for the fact that the first one points to the end of the found string, while the second indicates the start position of the found string. This means that the profile migration code tries to read version information from "C:\iexplore" instead of "C:\iexplore.exe", for example, which obviously fails because the former doesn't exist.
Attached patch patchSplinter Review
Assignee: nobody → gavin.sharp
Status: NEW → ASSIGNED
Attachment #248822 - Flags: review?(benjamin)
Attachment #248822 - Flags: review?(benjamin) → review?(mano)
Priority: -- → P2
Whiteboard: [patch-r?]
Target Milestone: --- → Firefox 3 alpha2
Comment on attachment 248822 [details] [diff] [review] patch r=mano.
Attachment #248822 - Flags: review?(mano) → review+
mozilla/browser/components/migration/src/nsProfileMigrator.cpp 1.25
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [patch-r?]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: