Bug 364042: first startup profile migration is broken, r=mano